[package]
name = "locdev"
version = "0.1.2"
edition = "2021"
description = "locdev is a command-line utility for managing your /etc/hosts file."
authors = ["Nicholas Rempel <nbrempel@gmail.com>"]
license = "MIT"
keywords = ["localhost", "hosts", "local"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/nrempel/locdev"

[dependencies]
clap = { version = "4.4.12", features = ["cargo", "derive"] }
colored = "2.1.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
