[package]
name = "hostie"
version = "0.1.2"
edition = "2024"
description = "hostie is a command-line utility for managing your /etc/hosts file."
authors = ["Nicholas Rempel <nbrempel@gmail.com>"]
license = "MIT"
keywords = ["hosts", "localhost", "development", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/nrempel/hostie"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "cargo"] }
colored = "3.0.0"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"
